# lightty

./: CMakeLists.txt  Install.sh  README.md
src/: main.c
